--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="gray">#d3d3d3</color>
+    <color name="background1">#ffffff</color>
+    <color name="background2">#d3d3d3</color>
+    <color name="buttonBack">#2b2d2f</color>
+    <color name="buttonText">#e5e5e0</color>
 </resources>
